# rust-practice

./: Cargo.toml
src/: collection.rs  combine.rs  lib.rs  main.rs  permute.rs  second.rs  sort.rs  third.rs
