[package]
name = "practice"
version = "0.1.0"
authors = ["Tăng Khải Phương <tkphuong@omnicasa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
impl_ops="0.1.1"